# TopoBridge

./: .gitignore  README.md  citation.cff  package.json  pyproject.toml
js/: graph_view.tsx  selection_view.tsx  types.ts  widget.css  widget.tsx
src/topo_widget/: widget.py
src/topo_widget/core/: data_processing.py
src/topo_widget/embedding/: __init__.py  feature_walk.py  random_walker.py  walklets.py
src/topo_widget/utils/: helpers.py  loaders.py
src/topobridge/: __init__.py  widget.py
src/topobridge/core/: __init__.py  embedding.py  layout.py
src/topobridge/embedding/: estimator.py  feature_walk.py  node2vec.py  walklets.py
src/topobridge/utils/: helpers.py
